BXC-4710 deleting THUMBNAIL_SMALL datastream type